--- a/app/globals.css
+++ b/app/globals.css
@@ -3,10 +3,13 @@
 @tailwind utilities;
 
 @keyframes blink {
-    0%, 100% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 0;
-    }
+
+  0%,
+  100% {
+    opacity: 1;
   }
+
+  50% {
+    opacity: 0;
+  }
+}
